crates/lowerer/tests/snapshots/upstream_parser_policy__expr_overflow_2_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 83)
└─Policy [0, 83)
  ├─PermitKeyword "permit" [0, 6)
  ├─Whitespace " " [6, 7)
  ├─OpenParenthesis "(" [7, 8)
  ├─VariableDefinition [8, 17)
  │ └─PrincipalKeyword "principal" [8, 17)
  ├─Comma "," [17, 18)
  ├─Whitespace " " [18, 19)
  ├─VariableDefinition [19, 25)
  │ └─ActionKeyword "action" [19, 25)
  ├─Comma "," [25, 26)
  ├─Whitespace " " [26, 27)
  ├─VariableDefinition [27, 35)
  │ └─ResourceKeyword "resource" [27, 35)
  ├─CloseParenthesis ")" [35, 36)
  ├─Whitespace "\n" [36, 37)
  ├─Condition [37, 81)
  │ ├─WhenKeyword "when" [37, 41)
  │ ├─Whitespace " " [41, 42)
  │ ├─OpenBrace "{" [42, 43)
  │ ├─Whitespace " " [43, 44)
  │ ├─RelationExpression [44, 80)
  │ │ ├─Name [44, 54)
  │ │ │ ├─PrincipalKeyword "principal" [44, 53)
  │ │ │ └─Whitespace " " [53, 54)
  │ │ ├─Equal "==" [54, 56)
  │ │ ├─Whitespace " " [56, 57)
  │ │ └─Literal [57, 80)
  │ │   ├─Integer "5555555555555555555555" [57, 79)
  │ │   └─Whitespace " " [79, 80)
  │ └─CloseBrace "}" [80, 81)
  ├─Semicolon ";" [81, 82)
  └─Whitespace "\n" [82, 83)
