crates/lowerer/tests/snapshots/upstream_parser_policy__extended_has_20-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected an attribute name
  ╭▸ test:3:21
  │
3 │     principal has a.(b)
  ╰╴                    ━━━ unexpected field access
