crates/lowerer/tests/snapshots/upstream_parser_policy__extended_has_20.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: missing expression
  ╭▸ test:3:19
  │
3 │       principal has a.(b)
  │ ┏━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━┛ expected an attribute name
