crates/lowerer/tests/snapshots/upstream_parser_policy__extended_has_21-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected an attribute name
  ╭▸ test:3:20
  │
3 │     principal has a.1
  ╰╴                   ━ unexpected field access
