crates/lowerer/tests/snapshots/upstream_parser_policy__extended_has_21_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `}`
  ╭▸ extended_has_21:3:21
  │
3 │     principal has a.1
  ╰╴                    ━ expected `}`
error: expected `;`
  ╭▸ extended_has_21:3:21
  │
3 │     principal has a.1
  ╰╴                    ━ expected `;`
error: unexpected token
  ╭▸ extended_has_21:3:21
  │
3 │       principal has a.1
  │ ┏━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━━━┛ unexpected token
error: expected `;`
  ╭▸ extended_has_21:4:4
  │
4 │ };
  ╰╴  ━ expected `;`
error: unexpected expression
  ╭▸ extended_has_21:3:19
  │
3 │     principal has a.1
  ╰╴                  ━━ expected an attribute name
error: missing policy effect
  ╭▸ extended_has_21:3:21
  │
3 │       principal has a.1
  │ ┏━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━━━┛ expected `permit` or `forbid`
