crates/lowerer/tests/snapshots/upstream_parser_policy__extended_has_21_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..69
├─Policy 0..64
│ ├─PermitKeyword "permit" 0..6
│ ├─Whitespace " " 6..7
│ ├─OpenParenthesis "(" 7..8
│ ├─VariableDefinition 8..17
│ │ └─PrincipalKeyword "principal" 8..17
│ ├─Comma "," 17..18
│ ├─Whitespace " " 18..19
│ ├─VariableDefinition 19..25
│ │ └─ActionKeyword "action" 19..25
│ ├─Comma "," 25..26
│ ├─Whitespace " " 26..27
│ ├─VariableDefinition 27..35
│ │ └─ResourceKeyword "resource" 27..35
│ ├─CloseParenthesis ")" 35..36
│ ├─Whitespace "\n" 36..37
│ └─Condition 37..64
│   ├─WhenKeyword "when" 37..41
│   ├─Whitespace " " 41..42
│   ├─OpenBrace "{" 42..43
│   ├─Whitespace "\n    " 43..48
│   └─HasExpression 48..64
│     ├─Name 48..58
│     │ ├─PrincipalKeyword "principal" 48..57
│     │ └─Whitespace " " 57..58
│     ├─HasKeyword "has" 58..61
│     ├─Whitespace " " 61..62
│     └─MemberExpression 62..64
│       ├─Name 62..63
│       │ └─Identifier "a" 62..63
│       └─Field 63..64
│         └─Dot "." 63..64
└─Policy 64..69
  └─Error 64..69
    ├─Integer "1" 64..65
    ├─Whitespace "\n" 65..66
    ├─CloseBrace "}" 66..67
    ├─Semicolon ";" 67..68
    └─Whitespace "\n" 68..69
